Criado o Componete Navigator; Criado uma nova forma de navagar; Criado a tela Cadastro

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'iPerdi' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'iPerdiTests' do
     inherit! :complete
     # Pods for testing
